Fix alignment of icon in a header

--- a/client/src/components/Table.module.scss
+++ b/client/src/components/Table.module.scss
@@ -29,6 +29,10 @@
     &[data-shrink] {
       width: 1px;
     }
+
+    > svg {
+      display: inline-block;
+    }
   }
 
   th,
